done with all problems

--- a/test/index.html
+++ b/test/index.html
@@ -25,16 +25,16 @@
     <script type="text/javascript" src="../src/Grub.js"></script>
     <script type="text/javascript" src="../src/Bee.js"></script>
     <script type="text/javascript" src="../src/HoneyMakerBee.js"></script>
-    <script type="text/javascript" src="../src/ForagerBee.js"></script>
-    <script type="text/javascript" src="../src/RetiredForager.js"></script>
+    <script type="text/javascript" src="../src/RetiredBee.js"></script>
+    <script type="text/javascript" src="../src/RetiredRetired.js"></script>
 
     <!-- spec files -->
     <script type="text/javascript" src="verifyClass.js"></script>
     <script type="text/javascript" src="Grub.js"></script>
     <script type="text/javascript" src="Bee.js"></script>
     <script type="text/javascript" src="HoneyMakerBee.js"></script>
-    <script type="text/javascript" src="ForagerBee.js"></script>
-    <script type="text/javascript" src="RetiredForagerBee.js"></script>
+    <script type="text/javascript" src="RetiredBee.js"></script>
+    <script type="text/javascript" src="RetiredRetiredBee.js"></script>
 
     <script>
 
